fix: background image in dark mode

--- a/blog/assets/scss/partials/base.scss
+++ b/blog/assets/scss/partials/base.scss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    background-image: url('/background.svg');
+    background-image: var(--body-background-image);
     background-attachment: fixed;
     margin: 0;
     font-family: var(--base-font-family);
